ns_pods_svc_schema.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: origin
---

apiVersion: v1
kind: Namespace
metadata:
  name: destination
---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: origin-can
    can: si
  name: origin-can
  namespace: origin
spec:
  containers:
  - args:
    - sleep
    - "90000"
    image: curlimages/curl
    name: origin-can
---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: origin-cannot
    can: nope
  name: origin-cannot
  namespace: origin
spec:
  containers:
  - args:
    - sleep
    - "90000"
    image: curlimages/curl
    name: origin-cannot
---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: destination
spec:
  containers:
  - image: nginx
    name: nginx
---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-svc
  namespace: destination
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: ClusterIP
